; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/regedit/extr_childwnd.c_get_root_key_name.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/regedit/extr_childwnd.c_get_root_key_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HKEY_CLASSES_ROOT = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [18 x i32] [i32 72, i32 75, i32 69, i32 89, i32 95, i32 67, i32 76, i32 65, i32 83, i32 83, i32 69, i32 83, i32 95, i32 82, i32 79, i32 79, i32 84, i32 0], align 4
@HKEY_CURRENT_USER = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [18 x i32] [i32 72, i32 75, i32 69, i32 89, i32 95, i32 67, i32 85, i32 82, i32 82, i32 69, i32 78, i32 84, i32 95, i32 85, i32 83, i32 69, i32 82, i32 0], align 4
@HKEY_LOCAL_MACHINE = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [19 x i32] [i32 72, i32 75, i32 69, i32 89, i32 95, i32 76, i32 79, i32 67, i32 65, i32 76, i32 95, i32 77, i32 65, i32 67, i32 72, i32 73, i32 78, i32 69, i32 0], align 4
@HKEY_USERS = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [11 x i32] [i32 72, i32 75, i32 69, i32 89, i32 95, i32 85, i32 83, i32 69, i32 82, i32 83, i32 0], align 4
@HKEY_CURRENT_CONFIG = common dso_local global i64 0, align 8
@.str.4 = private unnamed_addr constant [20 x i32] [i32 72, i32 75, i32 69, i32 89, i32 95, i32 67, i32 85, i32 82, i32 82, i32 69, i32 78, i32 84, i32 95, i32 67, i32 79, i32 78, i32 70, i32 73, i32 71, i32 0], align 4
@HKEY_DYN_DATA = common dso_local global i64 0, align 8
@.str.5 = private unnamed_addr constant [14 x i32] [i32 72, i32 75, i32 69, i32 89, i32 95, i32 68, i32 89, i32 78, i32 95, i32 68, i32 65, i32 84, i32 65, i32 0], align 4
@.str.6 = private unnamed_addr constant [28 x i32] [i32 85, i32 78, i32 75, i32 78, i32 79, i32 87, i32 78, i32 32, i32 72, i32 75, i32 69, i32 89, i32 44, i32 32, i32 80, i32 76, i32 69, i32 65, i32 83, i32 69, i32 32, i32 82, i32 69, i32 80, i32 79, i32 82, i32 84, i32 0], align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_root_key_name(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = load i64, i64* @HKEY_CLASSES_ROOT, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i8* bitcast ([18 x i32]* @.str to i8*), i8** %2, align 8
  br label %34

8:                                                ; preds = %1
  %9 = load i64, i64* %3, align 8
  %10 = load i64, i64* @HKEY_CURRENT_USER, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %8
  store i8* bitcast ([18 x i32]* @.str.1 to i8*), i8** %2, align 8
  br label %34

13:                                               ; preds = %8
  %14 = load i64, i64* %3, align 8
  %15 = load i64, i64* @HKEY_LOCAL_MACHINE, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %13
  store i8* bitcast ([19 x i32]* @.str.2 to i8*), i8** %2, align 8
  br label %34

18:                                               ; preds = %13
  %19 = load i64, i64* %3, align 8
  %20 = load i64, i64* @HKEY_USERS, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %18
  store i8* bitcast ([11 x i32]* @.str.3 to i8*), i8** %2, align 8
  br label %34

23:                                               ; preds = %18
  %24 = load i64, i64* %3, align 8
  %25 = load i64, i64* @HKEY_CURRENT_CONFIG, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %23
  store i8* bitcast ([20 x i32]* @.str.4 to i8*), i8** %2, align 8
  br label %34

28:                                               ; preds = %23
  %29 = load i64, i64* %3, align 8
  %30 = load i64, i64* @HKEY_DYN_DATA, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %33

32:                                               ; preds = %28
  store i8* bitcast ([14 x i32]* @.str.5 to i8*), i8** %2, align 8
  br label %34

33:                                               ; preds = %28
  store i8* bitcast ([28 x i32]* @.str.6 to i8*), i8** %2, align 8
  br label %34

34:                                               ; preds = %33, %32, %27, %22, %17, %12, %7
  %35 = load i8*, i8** %2, align 8
  ret i8* %35
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
